.happypack/s--1038582410
/Users/dongfanai/Desktop/project/kr-admin/src/Containers/Permission/User/Editdialog/index.js: JSX attributes must only be assigned a non-empty expression (140:44)
SyntaxError: /Users/dongfanai/Desktop/project/kr-admin/src/Containers/Permission/User/Editdialog/index.js: JSX attributes must only be assigned a non-empty expression (140:44)
[0m [90m 138 | [39m										[36mreturn[39m (
 [90m 139 | [39m											[33m<[39m[33mdiv[39m className[33m=[39m[32m"u-operation-lists"[39m  key[33m=[39m{index}[33m>[39m
[31m[1m>[22m[39m[90m 140 | [39m													[33m<[39m[33minput[39m type[33m=[39m[32m"checkbox"[39m checked[33m=[39m{} value[33m=[39m{items[33m.[39mid} onChange[33m=[39m{[36mthis[39m[33m.[39mgetValue}[33m/[39m[33m>[39m{item[33m.[39mname}
 [90m     | [39m													                               [31m[1m^[22m[39m
 [90m 141 | [39m											[33m<[39m[33m/[39m[33mdiv[39m[33m>[39m
 [90m 142 | [39m										)
 [90m 143 | [39m									})[0m
    at Parser.pp$5.raise (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:4246:13)
    at Parser.pp$8.jsxParseAttributeValue (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6237:14)
    at Parser.pp$8.jsxParseAttribute (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6300:42)
    at Parser.pp$8.jsxParseOpeningElementAt (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6311:31)
    at Parser.pp$8.jsxParseElementAt (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6333:29)
    at Parser.pp$8.jsxParseElementAt (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6346:30)
    at Parser.pp$8.jsxParseElement (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6388:15)
    at Parser.parseExprAtom (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6400:21)
    at Parser.pp$3.parseExprSubscripts (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3331:19)
    at Parser.pp$3.parseMaybeUnary (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3311:19)
    at Parser.pp$3.parseExprOps (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3241:19)
    at Parser.pp$3.parseMaybeConditional (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3218:19)
    at Parser.pp$3.parseMaybeAssign (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3181:19)
    at Parser.parseMaybeAssign (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:5655:24)
    at Parser.pp$3.parseParenAndDistinguishExpression (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3660:26)
    at Parser.pp$3.parseExprAtom (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3545:19)
    at Parser.parseExprAtom (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6402:22)
    at Parser.pp$3.parseExprSubscripts (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3331:19)
    at Parser.pp$3.parseMaybeUnary (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3311:19)
    at Parser.pp$3.parseExprOps (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3241:19)
    at Parser.pp$3.parseMaybeConditional (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3218:19)
    at Parser.pp$3.parseMaybeAssign (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3181:19)